--- a/index.html
+++ b/index.html
@@ -20,19 +20,29 @@
     <div class="conteiner">
       <header class="page-header">
         <!-- Навигация -->
-        <nav>
-          <a href="./index.html" class="logo"
-            ><span class="logo-item">Web</span>Studio</a
-          >
+        <nav class="flex">
+          <a href="./index.html" class="logo">
+            <span class="logo-item">Web</span>Studio
+          </a>
           <ul class="site-nav list">
-            <li><a href="./index.html" class="current">Студия</a></li>
-            <li><a href="./portfolio.html">Портфолио</a></li>
-            <li><a href="">Контакты</a></li>
+            <li class="item">
+              <a href="./index.html" class="link current">Студия</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="link">Портфолио</a>
+            </li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="contacts-list">
-          <li><a href="malto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="contacts-list list">
+          <li class="item">
+            <a href="malto:info@devstudio.com" class="link"
+              >info@devstudio.com
+            </a>
+          </li>
+          <li class="item">
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          </li>
         </ul>
       </header>
     </div>
@@ -48,30 +58,30 @@
       <!-- Особенности-features -->
       <div class="conteiner">
         <section class="section">
-          <ul class="features-list">
-            <li>
-              <h3 class="section-title">Внимание к деталям</h3>
+          <ul class="feature-list list">
+            <li class="item">
+              <h3 class="section-title list">Внимание к деталям</h3>
               <p>
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li>
-              <h3 class="section-title">Пунктуальность</h3>
+            <li class="item">
+              <h3 class="section-title list">Пунктуальность</h3>
               <p>
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li>
-              <h3 class="section-title">Планирование</h3>
+            <li class="item">
+              <h3 class="section-title list">Планирование</h3>
               <p>
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li>
-              <h3 class="section-title">Современные технологии</h3>
+            <li class="item">
+              <h3 class="section-title list">Современные технологии</h3>
               <p>
                 Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
@@ -81,8 +91,8 @@
 
           <!-- Чем мы занимаемся-section -->
           <section class="section">
-            <h2 class="section-title features-list">Чем мы занимаемся</h2>
-            <ul class="section-img">
+            <h2 class="section-title list">Чем мы занимаемся</h2>
+            <ul class="section-img list">
               <li>
                 <img
                   src="./img/img.jpg"
@@ -115,26 +125,26 @@
       <!-- Команда-comand -->
       <section class="section comand">
         <div class="conteiner">
-          <h2 class="section-title features-list">Наша команда</h2>
-          <ul class="comand-list">
-            <li>
+          <h2 class="section-title list">Наша команда</h2>
+          <ul class="comand-list list">
+            <li class="card-team">
               <img src="./img/img-4.jpg" alt="Фото" width="270" />
-              <h3 class="section-title">Игорь Демьяненко</h3>
+              <h3 class="title">Игорь Демьяненко</h3>
               <p>Product Designer</p>
             </li>
-            <li>
+            <li class="card-team">
               <img src="./img/img-5.jpg" alt="Фото" width="270" />
-              <h3 class="section-title">Ольга Репина</h3>
+              <h3 class="title">Ольга Репина</h3>
               <p>Frontend Developer</p>
             </li>
-            <li>
+            <li class="card-team">
               <img src="./img/img-6.jpg" alt="Фото" width="270" />
-              <h3 class="section-title">Николай Тарасов</h3>
+              <h3 class="title">Николай Тарасов</h3>
               <p>Marketing</p>
             </li>
-            <li>
+            <li class="card-team">
               <img src="./img/img-7.jpg" alt="Фото" width="270" />
-              <h3 class="section-title">Михаил Ермаков</h3>
+              <h3 class="title">Михаил Ермаков</h3>
               <p>UI Designer</p>
             </li>
           </ul>
@@ -150,7 +160,7 @@
             <span class="logo-item">Web</span
             ><span class="logo-color">Studio</span>
           </a>
-          <ul class="contact-list">
+          <ul class="contact-list list">
             <li>
               <address>г. Киев, пр-т Леси Украинки, 26</address>
             </li>
