--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,8 @@
 
   <body>
     <!-- Шапка -->
-    <div class="conteiner portfolio">
-      <header class="page-header">
+    <header class="page-header">
+      <div class="conteiner portfolio flex">
         <!-- Навигация -->
         <nav class="flex">
           <a href="./index.html" class="logo"
@@ -44,8 +44,8 @@
             <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
-      </header>
-    </div>
+      </div>
+    </header>
 
     <main>
       <div class="conteiner portfolio">
