--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
   <body>
     <!-- Шапка-header -->
-    <div class="conteiner">
-      <header class="page-header">
+    <header class="page-header">
+      <div class="conteiner header">
         <!-- Навигация -->
         <nav class="flex">
           <a href="./index.html" class="logo">
@@ -44,50 +44,52 @@
             <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
-      </header>
-    </div>
+      </div>
+    </header>
     <main>
       <!-- Герой-hero -->
-      <div class="hero">
-        <section>
+      <section class="hero">
+        <div class="conteiner header">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <a href="" class="hero-link">Заказать услугу</a>
-        </section>
-      </div>
+        </div>
+      </section>
 
       <!-- Особенности-features -->
       <div class="conteiner">
         <section class="section">
-          <ul class="feature-list list">
-            <li class="item">
-              <h3 class="section-title list">Внимание к деталям</h3>
-              <p>
-                Идейные соображения, а также начало повседневной работы по
-                формированию позиции.
-              </p>
-            </li>
-            <li class="item">
-              <h3 class="section-title list">Пунктуальность</h3>
-              <p>
-                Задача организации, в особенности же рамки и место обучения
-                кадров влечет за собой.
-              </p>
-            </li>
-            <li class="item">
-              <h3 class="section-title list">Планирование</h3>
-              <p>
-                Равным образом консультация с широким активом в значительной
-                степени обуславливает.
-              </p>
-            </li>
-            <li class="item">
-              <h3 class="section-title list">Современные технологии</h3>
-              <p>
-                Значимость этих проблем настолько очевидна, что реализация
-                плановых заданий.
-              </p>
-            </li>
-          </ul>
+          <div class="feature-cont">
+            <ul class="feature-list list">
+              <li class="item">
+                <h3 class="section-title list">Внимание к деталям</h3>
+                <p>
+                  Идейные соображения, а также начало повседневной работы по
+                  формированию позиции.
+                </p>
+              </li>
+              <li class="item">
+                <h3 class="section-title list">Пунктуальность</h3>
+                <p>
+                  Задача организации, в особенности же рамки и место обучения
+                  кадров влечет за собой.
+                </p>
+              </li>
+              <li class="item">
+                <h3 class="section-title list">Планирование</h3>
+                <p>
+                  Равным образом консультация с широким активом в значительной
+                  степени обуславливает.
+                </p>
+              </li>
+              <li class="item">
+                <h3 class="section-title list">Современные технологии</h3>
+                <p>
+                  Значимость этих проблем настолько очевидна, что реализация
+                  плановых заданий.
+                </p>
+              </li>
+            </ul>
+          </div>
 
           <!-- Чем мы занимаемся-section -->
           <section class="section">
