--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
       <!-- Команда-comand -->
       <section class="section comand">
-        <div class="conteiner">
+        <div class="conteiner comand">
           <h2 class="section-title list">Наша команда</h2>
           <ul class="comand-list list">
             <li class="card-team">
