--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       </section>
 
       <!-- Особенности-features -->
-      <div class="conteiner">
-        <section class="section">
+      <div class="features-section">
+        <section class="conteiner">
           <div class="feature-cont">
             <ul class="feature-list list">
               <li class="item">
@@ -92,14 +92,14 @@
           </div>
 
           <!-- Чем мы занимаемся-section -->
-          <section class="section">
+          <div class="section engage">
             <h2 class="section-title list">Чем мы занимаемся</h2>
             <ul class="section-img list">
               <li>
                 <img
                   src="./img/img.jpg"
                   alt="Робочий стол, мужские руки печатают
-                        на клавиатуре"
+                          на клавиатуре"
                   width="370"
                 />
               </li>
@@ -107,7 +107,7 @@
                 <img
                   src="./img/img-2.jpg"
                   alt="Женские руки, в левой руке держит
-                        телефон, правая рука на трекпаде ноутбука"
+                          телефон, правая рука на трекпаде ноутбука"
                   width="370"
                 />
               </li>
@@ -115,12 +115,12 @@
                 <img
                   src="./img/img-3.jpg"
                   alt="В левой руке планшет, в правой
-                        руке ручка для планшета"
+                          руке ручка для планшета"
                   width="370"
                 />
               </li>
             </ul>
-          </section>
+          </div>
         </section>
       </div>
 
