--- a/index.html
+++ b/index.html
@@ -56,73 +56,71 @@
       </section>
 
       <!-- Особенности-features -->
-      <div class="features-section">
-        <section class="conteiner">
-          <div class="feature-cont">
-            <ul class="feature-list list">
-              <li class="item">
-                <h3 class="section-title list">Внимание к деталям</h3>
-                <p>
-                  Идейные соображения, а также начало повседневной работы по
-                  формированию позиции.
-                </p>
-              </li>
-              <li class="item">
-                <h3 class="section-title list">Пунктуальность</h3>
-                <p>
-                  Задача организации, в особенности же рамки и место обучения
-                  кадров влечет за собой.
-                </p>
-              </li>
-              <li class="item">
-                <h3 class="section-title list">Планирование</h3>
-                <p>
-                  Равным образом консультация с широким активом в значительной
-                  степени обуславливает.
-                </p>
-              </li>
-              <li class="item">
-                <h3 class="section-title list">Современные технологии</h3>
-                <p>
-                  Значимость этих проблем настолько очевидна, что реализация
-                  плановых заданий.
-                </p>
-              </li>
-            </ul>
-          </div>
+      <section class="conteiner">
+        <div class="feature-cont">
+          <ul class="feature-list list">
+            <li class="item">
+              <h3 class="section-title list">Внимание к деталям</h3>
+              <p>
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="section-title list">Пунктуальность</h3>
+              <p>
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="section-title list">Планирование</h3>
+              <p>
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="section-title list">Современные технологии</h3>
+              <p>
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
 
-          <!-- Чем мы занимаемся-section -->
-          <div class="section engage">
-            <h2 class="section-title list">Чем мы занимаемся</h2>
-            <ul class="section-img list">
-              <li>
-                <img
-                  src="./img/img.jpg"
-                  alt="Робочий стол, мужские руки печатают
+        <!-- Чем мы занимаемся-section -->
+        <div class="section engage">
+          <h2 class="section-title list">Чем мы занимаемся</h2>
+          <ul class="section-img list">
+            <li>
+              <img
+                src="./img/img.jpg"
+                alt="Робочий стол, мужские руки печатают
                           на клавиатуре"
-                  width="370"
-                />
-              </li>
-              <li>
-                <img
-                  src="./img/img-2.jpg"
-                  alt="Женские руки, в левой руке держит
+                width="370"
+              />
+            </li>
+            <li>
+              <img
+                src="./img/img-2.jpg"
+                alt="Женские руки, в левой руке держит
                           телефон, правая рука на трекпаде ноутбука"
-                  width="370"
-                />
-              </li>
-              <li>
-                <img
-                  src="./img/img-3.jpg"
-                  alt="В левой руке планшет, в правой
+                width="370"
+              />
+            </li>
+            <li>
+              <img
+                src="./img/img-3.jpg"
+                alt="В левой руке планшет, в правой
                           руке ручка для планшета"
-                  width="370"
-                />
-              </li>
-            </ul>
-          </div>
-        </section>
-      </div>
+                width="370"
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
 
       <!-- Команда-comand -->
       <section class="section comand">
@@ -155,21 +153,19 @@
     </main>
 
     <!-- Подвал -->
-    <footer>
-      <div class="contacts">
-        <div class="conteiner">
-          <a href="./index.html" class="logo">
-            <span class="logo-item">Web</span
-            ><span class="logo-color">Studio</span>
-          </a>
-          <ul class="contact-list list">
-            <li>
-              <address>г. Киев, пр-т Леси Украинки, 26</address>
-            </li>
-            <li class="contact-item">info@example.com</li>
-            <li class="contact-item">+38 099 111 11 11</li>
-          </ul>
-        </div>
+    <footer class="footer">
+      <div class="conteiner">
+        <a href="./index.html" class="logo">
+          <span class="logo-item">Web</span
+          ><span class="logo-color">Studio</span>
+        </a>
+        <ul class="contact-list list">
+          <li>
+            <address>г. Киев, пр-т Леси Украинки, 26</address>
+          </li>
+          <li class="contact-item">info@example.com</li>
+          <li class="contact-item">+38 099 111 11 11</li>
+        </ul>
       </div>
     </footer>
   </body>
