--- a/portfolio.html
+++ b/portfolio.html
@@ -111,21 +111,19 @@
     </main>
 
     <!-- Подвал -->
-    <footer>
-      <div class="contacts">
-        <div class="conteiner">
-          <a href="./index.html" class="logo">
-            <span class="logo-item">Web</span
-            ><span class="logo-color">Studio</span>
-          </a>
-          <ul class="contact-list list">
-            <li>
-              <address>г. Киев, пр-т Леси Украинки, 26</address>
-            </li>
-            <li class="contact-item">info@example.com</li>
-            <li class="contact-item">+38 099 111 11 11</li>
-          </ul>
-        </div>
+    <footer class="footer">
+      <div class="conteiner">
+        <a href="./index.html" class="logo">
+          <span class="logo-item">Web</span
+          ><span class="logo-color">Studio</span>
+        </a>
+        <ul class="contact-list list">
+          <li>
+            <address>г. Киев, пр-т Леси Украинки, 26</address>
+          </li>
+          <li class="contact-item">info@example.com</li>
+          <li class="contact-item">+38 099 111 11 11</li>
+        </ul>
       </div>
     </footer>
   </body>
