--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
   <body>
     <!-- Шапка -->
     <header class="page-header">
-      <div class="conteiner portfolio flex">
+      <div class="conteiner flex">
         <!-- Навигация -->
         <nav class="flex">
           <a href="./index.html" class="logo"
