change html & css 07

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
+    <title>WebStudio 03</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -57,8 +57,8 @@
       </section>
 
       <!-- Особенности-features -->
-      <section class="conteiner">
-        <div class="feature-cont">
+      <section>
+        <div class="conteiner feature">
           <ul class="feature-list list">
             <li class="item">
               <h3 class="section-title list">Внимание к деталям</h3>
@@ -90,9 +90,11 @@
             </li>
           </ul>
         </div>
+      </section>
 
         <!-- Чем мы занимаемся-section -->
-        <div class="section engage">
+      <section>
+        <div class="conteiner engage">
           <h2 class="section-title list">Чем мы занимаемся</h2>
           <ul class="section-img list">
             <li>
