--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
+    <title>WebStudio 03</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -48,18 +48,19 @@
     </header>
 
     <main>
-      <div class="conteiner portfolio">
-        <!-- button -->
-        <ul class="flex-button list">
-          <li class="btn"><button type="button">Все</button></li>
-          <li class="btn"><button type="button">Веб-сайты</button></li>
-          <li class="btn"><button type="button">Приложения</button></li>
-          <li class="btn"><button type="button">Дизайн</button></li>
-          <li class="btn"><button type="button">Маркетинг</button></li>
-        </ul>
-        <!-- примеры-examples  -->
-        <section class="examples">
-          <ul class="flex-container list">
+      <!-- portfolio -->
+      <section>
+        <div class="conteiner portfolio">
+          <!-- button -->
+          <ul class="flex-button list">
+            <li class="btn"><button type="button">Все</button></li>
+            <li class="btn"><button type="button">Веб-сайты</button></li>
+            <li class="btn"><button type="button">Приложения</button></li>
+            <li class="btn"><button type="button">Дизайн</button></li>
+            <li class="btn"><button type="button">Маркетинг</button></li>
+          </ul>
+          <!-- примеры-examples  -->
+          <ul class="examples list">
             <li class="flex-card">
               <img src="./img/img-01.jpg" alt="" width="370" />
               <div class="card-content">
@@ -124,8 +125,8 @@
               </div>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
 
     <!-- Подвал -->
